--- a/src/main/resources/us/jost/sprechtl_jweissen_viergewinnt/vierGewinnt-view.fxml
+++ b/src/main/resources/us/jost/sprechtl_jweissen_viergewinnt/vierGewinnt-view.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="520.0" prefWidth="496.0" spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="us.jost.sprechtl_jweissen_viergewinnt.controller.ControllerGUI">
+<VBox alignment="CENTER" prefHeight="520.0" prefWidth="496.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="us.jost.sprechtl_jweissen_viergewinnt.controller.ControllerGUI">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
@@ -258,7 +260,7 @@
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Label fx:id="LabelMessage" prefHeight="53.0" prefWidth="340.0" text="Message" textAlignment="CENTER">
+            <Label fx:id="LabelMessage" prefHeight="53.0" prefWidth="333.0" text="Message" textAlignment="CENTER">
                <font>
                   <Font name="Consolas" size="12.0" />
                </font>
